--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,9 +1,13 @@
-.profile{
-    display: flex;
+.profile {
+  display: flex;
 
-
-        width: 100%;
-        .proContainer{
-            flex: 6;
-        }
+  width: 100%;
+  .proContainer {
+    flex: 6;
+  }
+  th,
+  td {
+    padding: 15px;
+    text-align: center;
+  }
 }
